--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -157,7 +157,7 @@
 
   .nav__links {
     position: absolute;
-    top: 130px;
+    top: 120px;
     left: 0;
     right: 0;
     transform: none;
